# noir-bench-extra

flink/CarAccidents/: pom.xml
flink/CarAccidents/src/main/java/carAccidents/: CarAccidents.java
flink/ConnectedComponents/: pom.xml
flink/ConnectedComponents/src/main/java/components/: ConnectedComponents.java
flink/ConnectedComponents/src/main/java/components/util/: ConnectedComponentsData.java
flink/EnumTriangles/: pom.xml
flink/EnumTriangles/src/main/java/triangles/: EnumTriangles.java
flink/EnumTriangles/src/main/java/triangles/util/: EnumTrianglesData.java  EnumTrianglesDataTypes.java
flink/EnumTrianglesSortGroup/src/main/java/triangles/: EnumTriangles.java
flink/KMeans/: pom.xml
flink/KMeans/src/main/java/kmeans/: Centroid.java  KMeans.java  SelectNearestCenter.java
flink/PageRank/: pom.xml
flink/PageRank/src/main/java/pagerank/: PageRank.java
flink/PageRank/src/main/java/pagerank/util/: PageRankData.java
flink/RollingTopWords/: pom.xml  run.sh
flink/RollingTopWords/src/main/java/rollingTopWords/: RollingTopWords.java
flink/TransitiveClosureNaive/: pom.xml
flink/TransitiveClosureNaive/src/main/java/closure/: TransitiveClosureNaive.java
flink/TransitiveClosureNaive/src/main/java/closure/util/: ConnectedComponentsData.java
flink/WordCount/: pom.xml
flink/WordCount/src/main/java/wordCount/: WordCount.java
flink/WordCountWindowed/: pom.xml
flink/WordCountWindowed/src/main/java/WordCountWindowed/: StreamingJob.java
mpi/ConnectedComponents/: CMakeLists.txt
mpi/ConnectedComponents/src/: csv.cpp  csv.hpp  main.cpp
mpi/EnumTriangles/: CMakeLists.txt
mpi/KMeans/: CMakeLists.txt  main.cpp
mpi/KMeans/include/: csv.cpp  verbosity_level.hpp
mpi/KMeans/include/argument_parser/: argument_parser.hpp
mpi/KMeans/include/file_handler/: file_handler.cpp
mpi/PageRank/: CMakeLists.txt
mpi/PageRank/src/: main.cpp  third_party
mpi/TransitiveClosure/: CMakeLists.txt
mpi/TransitiveClosure/src/: main.cpp
mpi/windowed_wordcount_gc/: CMakeLists.txt  run2.sh  run3.sh  setupnet.sh
mpi/windowed_wordcount_gc/src/: main.cpp  main_batched.cpp  main_separate_root.cpp  main_three_steps.cpp  main_three_steps_batch.cpp  main_three_steps_isend.cpp
mpi/wordcount/: CMakeLists.txt
mpi/wordcount/src/: iostream.cpp  main.cpp  mmap.cpp  timing.hpp  utils.hpp
noir-extra/: Cargo.toml
noir-extra/examples/: broken.rs  iter-ex.rs  noir-hashjoin.rs  noir-kmeans.rs  noir-pagerank-delta.rs  noir-pagerank-diff.rs  noir-pagerank-timely.rs  noir-pagerank.rs  noir-wordcount.rs  noir-wordcount_assoc.rs  wc-simple.rs
openmp/EnumTriangles/: CMakeLists.txt
openmp/EnumTriangles/src/: csv.hpp  main.cpp
openmp/KMeans/: CMakeLists.txt  main.cpp
openmp/KMeans/include/: csv.cpp  csv.hpp  timing.hpp  verbosity_level.hpp
openmp/KMeans/include/argument_parser/: argument_parser.cpp
openmp/KMeans/include/file_handler/: file_handler.hpp
openmp/collatz/: CMakeLists.txt
openmp/collatz/src/: main.cpp
openmp/wordcount/: CMakeLists.txt
openmp/wordcount/src/: iostream.cpp  main.cpp  utils.hpp
rayon/: Cargo.toml
rayon/examples/: rayon-collatz.rs  rayon-kmeans.rs  rayon-transitive.rs  rayon-wordcount-bridge.rs  rayon-wordcount-mem.rs  rayon-wordcount-par.rs
timely/: Cargo.toml
timely/examples/: differential-pagerank.rs  timely-hashjoin.rs  timely-pagerank.rs  timely-wordcount.rs  timely-wordcount_assoc.rs
timely/nexmark/: Cargo.toml
timely/nexmark-latency/: Cargo.toml
timely/nexmark-latency/examples/: timely.rs
timely/nexmark-latency/src/: config.rs  event.rs  lib.rs
timely/nexmark-latency/src/queries/: mod.rs  q2.rs  q3.rs  q5.rs
timely/nexmark/examples/: timely.rs
timely/nexmark/megaphone/src/: stateful.rs
timely/nexmark/src/: config.rs  lib.rs
timely/nexmark/src/queries/: mod.rs  q1.rs  q4.rs  q4_q6_common.rs  q5.rs  q6.rs  q8.rs
