[package]
name = "noir-extra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
mimalloc = { version = "0.1.32", default-features = false }
noir = { path = "../../noir" , features = ["clap", "ssh", "flume", "timestamp"], default-features = false }
env_logger = "0.10.0"
rand = { version = "0.8.5", features = ["small_rng"] }
regex = "1.7.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"]}
serde = { version = "1.0.150", features = ["derive"] }
csv = "1.2.0"
# nexmark = { version = "0.2.0", features = ["serde"] }
fxhash = "0.2.1"
nexmark = { path = "./nexmark-rs", features = ["serde"] }