[package]
name = "timely-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
timely = { version = "0.12" }
differential-dataflow = "0.12"
regex = "1.7"
log = "0.4"
env_logger = "0.10.0"
mimalloc = { version = "0.1.32", default-features = false }
itertools = "0.10"
wyhash = "0.5.0"
csv = "1.1.6"
rand = { version = "0.8.5", features = ["small_rng"] }
