[package]
name = "nexmark"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]

[features]
default = ["dynamic_scaling_mechanism/bin-8"]
fake_stateful = ["dynamic_scaling_mechanism/fake_stateful"]

[dependencies]
differential-dataflow = { git = "https://github.com/TimelyDataflow/differential-dataflow.git" }
#differential-dataflow = "0.8"
timely = "0.12.0"
#timely = { git = "https://github.com/antiguru/timely-dataflow.git", branch = "session_cease"}
#timely = "0.8"
#abomonation = { git = "https://github.com/frankmcsherry/abomonation.git" }
abomonation = "^0.7"
abomonation_derive = "0.5"
serde = "*"
serde_json = "*"
serde_derive = "*"
rand = { version = "0.8.5", features = ["small_rng"] }
fnv="1.0"
streaming-harness = { version = "0.2.0", features = ["hdrhist-support"] }
hdrhist = "0.5.0"
dynamic_scaling_mechanism = { version = "0.0.1", path = "./megaphone", default_features = false }
lazy_static = "1.4.0"
mimalloc = { version = "0.1.34", default-features = false }
micrometer = { version = "0.2.0", features = ["enable"] }
once_cell = "1.17.1"

[dependencies.clap]
version = "~2.32"
default-features = false

#[patch.crates-io]
#timely = { git = 'https://github.com/frankmcsherry/timely-dataflow.git' }

[profile.release]
# opt-level = 3
# debug = true
# rpath = false
lto = true
# codegen-units = 16
# debug-assertions = false
#panic = "abort"

